// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabbedContent renders Header properly according to snapshot 1`] = `
<div
  className="tab-header header activeHeader  "
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  just some Header
</div>
`;

exports[`TabbedContent renders Tab properly according to snapshot 1`] = `
<div
  className="tab-component "
  style={
    Object {
      "color": "blue",
    }
  }
/>
`;

exports[`TabbedContent renders TabbedContent properly according to snapshot 1`] = `
<TabbedContent
  activeTab={0}
  alignHeaders="right"
  className="mySwitch"
  id="5"
  style={
    Object {
      "color": "black",
    }
  }
  type="normal"
  vertical={true}
>
  <div
    className="tabbed-content-component container containerV"
    id="5"
    style={
      Object {
        "color": "black",
      }
    }
  >
    <div
      className="heading headingV borderV headingVRight headingVAlign"
    >
      <Header
        active={false}
        align="right"
        className="mySwitch"
        key="0"
        onClick={[Function]}
        style={
          Object {
            "color": "black",
          }
        }
        type="normal"
        vertical={true}
      >
        <div
          className="tab-header header inactiveHeader headerAlign mySwitch"
          onClick={[Function]}
          style={
            Object {
              "color": "black",
              "width": undefined,
            }
          }
        >
          Moosend
        </div>
      </Header>
      <Header
        active={true}
        align="right"
        className="mySwitch"
        key="1"
        onClick={[Function]}
        style={
          Object {
            "color": "black",
          }
        }
        type="normal"
        vertical={true}
      >
        <div
          className="tab-header header activeHeader headerAlign mySwitch"
          onClick={[Function]}
          style={
            Object {
              "color": "black",
              "width": undefined,
            }
          }
        >
          Home
        </div>
      </Header>
      <Header
        active={false}
        align="right"
        className="mySwitch"
        key="2"
        onClick={[Function]}
        style={
          Object {
            "color": "black",
          }
        }
        type="normal"
        vertical={true}
      >
        <div
          className="tab-header header inactiveHeader headerAlign mySwitch"
          onClick={[Function]}
          style={
            Object {
              "color": "black",
              "width": undefined,
            }
          }
        >
          About
        </div>
      </Header>
    </div>
    <div
      className="content contentV"
    >
      <Content
        active={false}
        className=""
        key="0"
        style={Object {}}
      >
        <div
          className="content-component invisible "
          style={Object {}}
        >
          Table
        </div>
      </Content>
      <Content
        active={true}
        className=""
        key="1"
        style={Object {}}
      >
        <div
          className="content-component visible "
          style={Object {}}
        >
          Some Content
        </div>
      </Content>
      <Content
        active={false}
        className=""
        key="2"
        style={Object {}}
      >
        <div
          className="content-component invisible "
          style={Object {}}
        >
          Blla blla
        </div>
      </Content>
    </div>
  </div>
</TabbedContent>
`;

exports[`TabbedContent renders TabbedContent vertically with radio styles 1`] = `
<div
  className="tabbed-content-component container containerV"
  style={Object {}}
>
  <div
    className="heading headingV borderV headingCenter "
  >
    <Header
      active={false}
      className="mySwitch"
      key="0"
      onClick={[Function]}
      style={
        Object {
          "color": "black",
        }
      }
      type="alternate"
      vertical={true}
    >
      Moosend
    </Header>
    <Header
      active={true}
      className="mySwitch"
      key="1"
      onClick={[Function]}
      style={
        Object {
          "color": "black",
        }
      }
      type="alternate"
      vertical={true}
    >
      Home
    </Header>
    <Header
      active={false}
      className="mySwitch"
      key="2"
      onClick={[Function]}
      style={
        Object {
          "color": "black",
        }
      }
      type="alternate"
      vertical={true}
    >
      About
    </Header>
  </div>
  <div
    className="content contentV"
  >
    <Content
      active={false}
      className=""
      key="0"
      style={Object {}}
    >
      Table
    </Content>
    <Content
      active={true}
      className=""
      key="1"
      style={Object {}}
    >
      Some Content
    </Content>
    <Content
      active={false}
      className=""
      key="2"
      style={Object {}}
    >
      Blla blla
    </Content>
  </div>
</div>
`;
